--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
 
 # Distribution / packaging
 .Python
@@ -99,3 +97,5 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+.idea/
