--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ cache: pip
 
 install:
   - pip install -r requirements.txt
-
+  - pip install pytest
 script:
   - python setup.py build_ext --inplace
+  - pytest -v
