--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,10 +20,14 @@ environment:
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
     CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\extra\appveyor\compiler.cmd'
-  matrix:
 
+  matrix:
     - PYTHON: "C:\\Python36-x64"
       PYTHON_VERSION: "3.6"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Python35-x64"
+      PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "64"
 
 init:
@@ -50,7 +54,9 @@ install:
   - "python --version"
   - "%CMD_IN_ENV% pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% pip install -r requirements.txt"
-
+  - "%CMD_IN_ENV% pip install -r py.test"
 test_script:
 
   - "%CMD_IN_ENV% python setup.py build_ext --inplace"
+  - "%CMD_IN_ENV% pytest -v -s"
+
