--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,12 @@ matrix:
     compiler: gcc-5
     env: CC=gcc
 
+  - os: linux
+    language: python
+    python: "3.5"
+    compiler: gcc-5
+    env: CC=gcc
+
 
 sudo: false
 
