--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -54,7 +54,7 @@ install:
   - "python --version"
   - "%CMD_IN_ENV% pip install -U pip setuptools wheel"
   - "%CMD_IN_ENV% pip install -r requirements.txt"
-  - "%CMD_IN_ENV% pip install -r py.test"
+  - "%CMD_IN_ENV% pip install -r pytest"
 test_script:
 
   - "%CMD_IN_ENV% python setup.py build_ext --inplace"
