--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ sudo: false
 cache: pip
 
 install:
+  - "python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
   - pip install -r requirements.txt
   - pip install pytest
 script:
