--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,10 @@ cache: pip
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
+  - pip install -U wheel pypi setuptools --upgrade
   - pip install -r requirements.txt
   - pip install pytest
-  
+
 script:
   - python setup.py build_ext --inplace
   - pytest -v -s
