--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,8 +45,6 @@ init:
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
           throw "There are newer queued builds for this pull request, failing early." }
 
-# all our python builds have to happen in tests_script...
-build: off
 
 install:
   # Install the Redis
@@ -64,9 +62,13 @@ test_script:
   - "%CMD_IN_ENV% python setup.py build_ext --inplace"
   - "%CMD_IN_ENV% pytest -v -s"
 
+build_script:
+  - "%CMD_IN_ENV% python setup.py bdist_wheel"
+
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
-  - path: dist\*
+  - path: 'dist\*.whl'
+    name: wheel
 
 deploy_script:
   # This step builds your wheels.
@@ -76,5 +78,5 @@ deploy_script:
   - "echo [pypi] > %USERPROFILE%\\.pypirc"
   - "echo username: nooperpudd >> %USERPROFILE%\\.pypirc"
   - "echo password: %password% >> %USERPROFILE%\\.pypirc"
-  - "%CMD_IN_ENV% python setup.py bdist_wheel upload"
+  - "%CMD_IN_ENV% python setup.py upload"
 
