--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,9 +45,10 @@ init:
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
           throw "There are newer queued builds for this pull request, failing early." }
 
+  - build: off
 
 install:
-  # Install the Redis
+
 
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   # Check that we have the expected version and architecture for Python
