--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -45,7 +45,7 @@ init:
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
           throw "There are newer queued builds for this pull request, failing early." }
 
-  - build: off
+build: off
 
 install:
 
