--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ cache: pip
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
-  - pip install -U wheel pypi setuptools --upgrade
-  - pip install -r requirements.txt
-  - pip install pytest
+#  - "pip install wheel pip setuptools --upgrade"
+  - "pip install -r requirements.txt"
+  - "pip install pytest"
 
 script:
   - python setup.py build_ext --inplace
