--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ cache: pip
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
-#  - "pip install wheel pip setuptools --upgrade"
+  - "pip install wheel pip setuptools --upgrade"
   - "pip install -r requirements.txt"
   - "pip install pytest"
 
