--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,8 +34,8 @@ environment:
       PYTHON_VERSION: "3.5.5"
       PYTHON_ARCH: "64"
 
-    - PYTHON: "pypy3"
-      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\pypy3"
+      
 
 init:
   - "ECHO %PYTHON% %PYTHON_VERSION%"
