--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,11 +35,9 @@ environment:
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\pypy3"
-      
+
 
 init:
-  - "ECHO %PYTHON% %PYTHON_VERSION%"
-
   # If there is a newer build queued for the same PR, cancel this one.
   # The AppVeyor 'rollout builds' option is supposed to serve the same
   # purpose but it is problematic because it tends to cancel builds pushed
@@ -50,10 +48,15 @@ init:
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
           throw "There are newer queued builds for this pull request, failing early." }
 
+  - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-v5.10.1-win32.zip', "$env:appveyor_build_folder\pypy3.zip"); 7z x pypy3.zip | Out-Null; move pypy3-v5.10.1-win32 C:\pypy3; move C:\pypy3\pypy.exe C:\pypy3\python.exe }
+
+  - "ECHO %PYTHON% %PYTHON_VERSION%"
+
 build: off
 
 install:
 
+  - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', "$env:appveyor_build_folder\get-pip.py"); python get-pip.py }
 
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
   # Check that we have the expected version and architecture for Python
