--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -65,9 +65,9 @@ install:
   - "python --version"
 #  - "%CMD_IN_ENV% python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
 
-  - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
-  - "%CMD_IN_ENV% python -m pip install -r requirements.txt"
-  - "%CMD_IN_ENV% python -m pip install pytest"
+#  - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
+  - "%CMD_IN_ENV% pip install -r requirements.txt"
+  - "%CMD_IN_ENV% pip install pytest"
 
 test_script:
 
