--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -60,8 +60,9 @@ install:
   # Check that we have the expected version and architecture for Python
   - "python --version"
   #  - "%CMD_IN_ENV% python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
-  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
+#  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
   #  - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
+  - "pip --version"
   - "python -m pip install -r requirements.txt"
   - "python -m pip install pytest"
 
