--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -69,8 +69,8 @@ install:
 
 test_script:
 
-  - "%CMD_IN_ENV% python setup.py build_ext --inplace"
-  - "pytest -v -s"
+  - "%CMD_IN_ENV% python -m setup.py build_ext --inplace"
+  - "python -m pytest -v -s"
 
 # ignore auto publish to pypi.
 
