--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,40 +37,44 @@ environment:
     CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\extra\appveyor\compiler.cmd'
 
   matrix:
-    - PYTHON: "C:\\Python36-x64"
+    - PYTHON_DIR: "C:\\Python36-x64"
+      PYTHON: "C:\\Python36-X64\\python"
       PYTHON_VERSION: "3.6.5"
       PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Python35-x64"
+
+    - PYTHON_DIR: "C:\\Python35-x64"
+      PYTHON: "C:\\Python35-X64\\python"
       PYTHON_VERSION: "3.5.5"
       PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\pypy3"
-
+    - PYTHON_DIR: "C:\\pypy3"
+      PYTHON: "C:\\pypy3\\pypy3"
+      PYTHON_VERSION: "pypy3"
 
 build: off
 
 install:
 
-  - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-v5.10.1-win32.zip', "$env:appveyor_build_folder\pypy3.zip"); 7z x pypy3.zip | Out-Null; move pypy3-v5.10.1-win32 C:\pypy3; move C:\pypy3\pypy3.exe C:\pypy3\python.exe }
+  - ps: If(($env:PYTHON_VERSION).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-v5.10.1-win32.zip', "$env:appveyor_build_folder\pypy3.zip"); 7z x pypy3.zip | Out-Null; move pypy3-v5.10.1-win32 C:\pypy3; }
 
-  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
+  - "SET PATH=%PYTHON_DIR%;%PYTHON_DIR%\\Scripts;%PATH%"
 
-  - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', "$env:appveyor_build_folder\get-pip.py"); python get-pip.py }
+  - ps: If(($env:PYTHON_VERSION).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', "$env:appveyor_build_folder\get-pip.py"); %PYTHON% get-pip.py }
 
   # Check that we have the expected version and architecture for Python
-  - cmd: "python --version"
+  - cmd: "%PYTHON% --version"
   #  - "%CMD_IN_ENV% python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
-  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
-  #  - "%CMD_IN_ENV% python -m pip install -U pip setuptools wheel"
-  - "python -m pip --version"
-  - "python -m pip install -r requirements.txt"
-  - "python -m pip install pytest"
+  #  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
+  - "%python% -m pip install -U pip setuptools wheel"
+  - "%PYTHON% -m pip --version"
+  - "%PYTHON% -m pip install -r requirements.txt"
+  - "%PYTHON% -m pip install pytest"
 
 test_script:
 
-  - "%CMD_IN_ENV% python setup.py build_ext --inplace"
-  - "python -m pytest -v -s"
+  - "%CMD_IN_ENV% %PYTHON% setup.py build_ext --inplace"
+  - "%PYTHON% -m pytest -v -s"
 
 # ignore auto publish to pypi.
 
