--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,7 +51,7 @@ environment:
     - PYTHON_DIR: "C:\\pypy3"
       PYTHON: "C:\\pypy3\\pypy3"
       PYTHON_VERSION: "3.5.3"
-      PYPY_VERSION: "pypy3-v5.10.1-win32"
+      PYPY_VERSION: "pypy3"
 
 build: off
 
