--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,7 +34,7 @@ environment:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\extra\appveyor\compiler.cmd'
+    CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\\extra\\appveyor\\compiler.cmd'
 
   matrix:
     - PYTHON_DIR: "C:\\Python36-x64"
@@ -50,16 +50,22 @@ environment:
 
     - PYTHON_DIR: "C:\\pypy3"
       PYTHON: "C:\\pypy3\\pypy3"
+      PYTHON_ARCH: "32"
+      PYTHON_PYPY: "pypy3"
       PYTHON_VERSION: "3.5.3"
-      PYPY_VERSION: "pypy3"
+      PYTHON_PYPY_VERSION: "4.0.1"
 
 build: off
 
 install:
 
+  - ECHO "Installed SDKs:"
+
+  - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
+
   - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-v5.10.1-win32.zip', "$env:appveyor_build_folder\pypy3.zip"); 7z x pypy3.zip | Out-Null; move pypy3-v5.10.1-win32 C:\pypy3; }
 
-  - "SET PATH=%PYTHON_DIR%;%PYTHON_DIR%\\Scripts;%PATH%"
+  - "SET PATH=%PYTHON_DIR%;%PYTHON_DIR%\\bin;%PYTHON_DIR%\\Scripts;%PATH%"
 
   - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bootstrap.pypa.io/get-pip.py', "$env:appveyor_build_folder\get-pip.py"); pypy3.exe get-pip.py }
 
