--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,18 +34,17 @@ environment:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\\extra\\appveyor\\compiler.cmd'
-
+    CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\extra\appveyor\compiler.cmd'
   matrix:
-    - PYTHON_DIR: "C:\\Python36-x64"
-      PYTHON: "C:\\Python36-X64\\python"
-      PYTHON_VERSION: "3.6.5"
-      PYTHON_ARCH: "64"
-
 
     - PYTHON_DIR: "C:\\Python35-x64"
       PYTHON: "C:\\Python35-X64\\python"
       PYTHON_VERSION: "3.5.5"
+      PYTHON_ARCH: "64"
+
+    - PYTHON_DIR: "C:\\Python36-x64"
+      PYTHON: "C:\\Python36-X64\\python"
+      PYTHON_VERSION: "3.6.5"
       PYTHON_ARCH: "64"
 
     - PYTHON_DIR: "C:\\pypy3"
@@ -53,15 +52,11 @@ environment:
       PYTHON_ARCH: "32"
       PYTHON_PYPY: "pypy3"
       PYTHON_VERSION: "3.5.3"
-      PYTHON_PYPY_VERSION: "4.0.1"
+      PYTHON_PYPY_VERSION: "5.10.1"
 
 build: off
 
 install:
-
-  - ECHO "Installed SDKs:"
-
-  - ps: "ls \"C:/Program Files/Microsoft SDKs/Windows\""
 
   - ps: If(($env:PYTHON).Contains("pypy3")) { (New-Object Net.WebClient).DownloadFile('https://bitbucket.org/pypy/pypy/downloads/pypy3-v5.10.1-win32.zip', "$env:appveyor_build_folder\pypy3.zip"); 7z x pypy3.zip | Out-Null; move pypy3-v5.10.1-win32 C:\pypy3; }
 
@@ -74,7 +69,7 @@ install:
   #  - "%CMD_IN_ENV% python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
   #  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
   - "%PYTHON% -m pip install -U pip setuptools wheel"
-  - "%PYTHON% -m pip --version"
+
   - "%PYTHON% -m pip install -r requirements.txt"
   - "%PYTHON% -m pip install pytest"
 
