--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -71,11 +71,12 @@ install:
 
   # Check that we have the expected version and architecture for Python
   - cmd: "%PYTHON% --version"
-  #  - "%CMD_IN_ENV% python -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
-  #  - ps: If(($env:PYTHON).Contains("pypy3")) { python -m pip install -U --force-reinstall pip }
-  - "%PYTHON% -m pip install -U pip setuptools wheel"
 
+  - "%PYTHON% -c \"import struct; print(struct.calcsize('P') * 8)\"" # show python version
+
+  - "%PYTHON% -m pip install -U pip setuptools wheel"
   - "%PYTHON% -m pip install -r requirements.txt"
+  
   - "%PYTHON% -m pip install pytest"
 
 test_script:
