--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,12 +51,17 @@ environment:
       PYTHON_VERSION: "3.7"
       PYTHON_ARCH: "64"
 
+    - PYTHON_DIR: "C:\\Python38-x64"
+      PYTHON: "C:\\Python38-X64\\python"
+      PYTHON_VERSION: "3.8.3"
+      PYTHON_ARCH: "64"
+
     - PYTHON_DIR: "C:\\pypy3"
       PYTHON: "C:\\pypy3\\pypy3"
       PYTHON_ARCH: "32"
       PYTHON_PYPY: "pypy3"
-      PYTHON_VERSION: "3.5.3"
-      PYTHON_PYPY_VERSION: "5.10.1"
+      PYTHON_VERSION: "3.6"
+      PYTHON_PYPY_VERSION: "7.3.1"
 
 
 matrix:
