--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
     - python: 3.7
       sudo: required
       dist: xenial
+    - python: 3.8
+      sudo: required
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
