--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,12 +38,12 @@ environment:
 
     - PYTHON_DIR: "C:\\Python35-x64"
       PYTHON: "C:\\Python35-X64\\python"
-      PYTHON_VERSION: "3.5.5"
+      PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "64"
 
     - PYTHON_DIR: "C:\\Python36-x64"
       PYTHON: "C:\\Python36-X64\\python"
-      PYTHON_VERSION: "3.6.5"
+      PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
      
     - PYTHON_DIR: "C:\\Python37-x64"
@@ -53,7 +53,12 @@ environment:
 
     - PYTHON_DIR: "C:\\Python38-x64"
       PYTHON: "C:\\Python38-X64\\python"
-      PYTHON_VERSION: "3.8.3"
+      PYTHON_VERSION: "3.8"
+      PYTHON_ARCH: "64"
+
+    - PYTHON_DIR: "C:\\Python39-x64"
+      PYTHON: "C:\\Python39-X64\\python"
+      PYTHON_VERSION: "3.9"
       PYTHON_ARCH: "64"
 
     - PYTHON_DIR: "C:\\pypy3"
