--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
       dist: xenial
     - python: 3.8
       sudo: required
+    - python: 3.9
+      sudo: required
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
