--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: python
 
+dist: focal
+
 matrix:
   include:
     # others still work and don't install python3.7
-    - python: pypy3.6-7.3.1
+    - python: 'pypy3.6-7.3.1'
+      sudo: required
+    - python: 'pypy3.7-7.3.1'
       sudo: required
     - python: 3.6
       sudo: required
     - python: 3.7
       sudo: required
-      dist: xenial
     - python: 3.8
       sudo: required
     - python: 3.9
