--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,9 +24,6 @@ cache:
   # usage on our rackspace account.
   - '%LocalAppData%\pip\Cache'
 
-image:
-- Visual Studio 2017
-
 environment:
 
   global:
@@ -36,22 +33,22 @@ environment:
     CMD_IN_ENV: 'cmd /E:ON /V:ON /C .\extra\appveyor\compiler.cmd'
   matrix:
     - PYTHON_DIR: "C:\\Python36-x64"
-      PYTHON: "C:\\Python36-X64\\python"
+      PYTHON: "C:\\Python36-x64\\python"
       PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
      
     - PYTHON_DIR: "C:\\Python37-x64"
-      PYTHON: "C:\\Python37-X64\\python"
+      PYTHON: "C:\\Python37-x64\\python"
       PYTHON_VERSION: "3.7"
       PYTHON_ARCH: "64"
 
     - PYTHON_DIR: "C:\\Python38-x64"
-      PYTHON: "C:\\Python38-X64\\python"
+      PYTHON: "C:\\Python38-x64\\python"
       PYTHON_VERSION: "3.8"
       PYTHON_ARCH: "64"
 
     - PYTHON_DIR: "C:\\Python39-x64"
-      PYTHON: "C:\\Python39-X64\\python"
+      PYTHON: "C:\\Python39-x64\\python"
       PYTHON_VERSION: "3.9"
       PYTHON_ARCH: "64"
 
