--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ dist: focal
 jobs:
   include:
     # others still work and don't install python3.7
-    - python: 'pypy3.7'
-    - python: 'pypy3.8'
-    - python: 'pypy3.9'
+    - python: 'pypy3.7-7'
+    - python: 'pypy3.8-7'
+    - python: 'pypy3.9-7'
     - python: 3.7
     - python: 3.8
     - python: 3.9
