--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
     - python: 3.8
     - python: 3.9
     - python: 3.10
-
+    - python: 3.11
 
 install:
   - python -c "import struct; print(struct.calcsize('P') * 8)"
