--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,15 +1,12 @@
-name: deploy
-
+name: deploy pypi packages
 on:
-  release:
+  push:
     tags:
-      - v*
-
+      - "v*"
 jobs:
   deploy:
     name: python build
     runs-on: ubuntu-latest
-
   steps:
     - name: checkout repo
       uses: actions/checkout@v3
@@ -23,5 +20,6 @@ jobs:
 
     - name: Publish a Python distribution to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
