--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,25 +1,25 @@
 name: deploy pypi packages
 on:
-  push:
+  release:
     tags:
       - "v*"
 jobs:
   deploy:
     name: python build
     runs-on: ubuntu-latest
-  steps:
-    - name: checkout repo
-      uses: actions/checkout@v3
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-    - name: Build sdist
-      run: python setup.py sdist
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
 
-    - name: Publish a Python distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Build sdist
+        run: python setup.py sdist
+        
+      - name: Publish a Python distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
