--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,10 +15,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install pip setuptools pytest --upgrade
+          pip install -r requirements.txt --upgrade
 
       - name: Build sdist
         run: python setup.py sdist
-        
+
       - name: Publish a Python distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
